--- a/android/app/src/main/res/layout/activity_block.xml
+++ b/android/app/src/main/res/layout/activity_block.xml
@@ -1,27 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#C6C4B7"
     android:gravity="center">
 
-    <!-- TextView ở giữa màn hình -->
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:contentDescription="@string/text_app_limit"
+        android:src="@drawable/icon_limit" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="@string/app_limit"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:layout_centerInParent="true" />
+        android:textColor="#BF360C"
+        android:textSize="24sp" />
 
-    <!-- Button nằm dưới TextView và căn giữa theo chiều ngang -->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/back_button"
+        android:id="@+id/backBtn"
         android:text="@string/back_home"
-        android:layout_below="@id/textView"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginBottom="100dp"
+        android:background="#FF7043"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/askParentBtn"
+        android:text="@string/text_ask_parent"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:textColor="#BF360C"
+        android:background="#FFDAB9"/>
 </RelativeLayout>
